[package]
name = "discrete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
clap = { version = "4.4.14", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
itertools = "0.12.0"
rayon = "1.8.0"
